--- a/res/menu/main.xml
+++ b/res/menu/main.xml
@@ -1,9 +1,17 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
 
     <item
-        android:id="@+id/action_settings"
-        android:orderInCategory="100"
-        android:showAsAction="never"
-        android:title="@string/action_settings"/>
+        android:id="@+id/menu_recipes"
+        android:orderInCategory="0"
+        android:showAsAction="always"
+        android:title="@string/menu_recipes"/>
+    <item
+        android:id="@+id/menu_settings"
+        android:orderInCategory="7"
+        android:title="@string/menu_settings"/>
+    <item
+        android:id="@+id/menu_quit"
+        android:orderInCategory="8"
+        android:title="@string/menu_quit"/>
 
 </menu>
