--- a/res/menu/main.xml
+++ b/res/menu/main.xml
@@ -6,6 +6,17 @@
         android:showAsAction="always"
         android:title="@string/menu_recipes"/>
     <item
+        android:id="@+id/menu_shopping_list"
+        android:orderInCategory="2"
+        android:showAsAction="always"
+        android:title="@string/menu_shopping_list"/>
+    <item
+        android:id="@+id/menu_favorites"
+        android:icon="@drawable/ic_action_star"
+        android:orderInCategory="3"
+        android:showAsAction="always"
+        android:title="@string/menu_favorites"/>
+    <item
         android:id="@+id/menu_search"
         android:icon="@drawable/ic_action_search"
         android:orderInCategory="4"
