--- a/res/layout/activity_recipe.xml
+++ b/res/layout/activity_recipe.xml
@@ -10,9 +10,30 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".RecipeActivity" >
 
-    <TextView
-        android:id="@+id/textview_recipe_name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal" >
+
+        <TextView
+            android:id="@+id/textview_recipe_name"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1" />
+
+        <ImageButton
+            android:id="@+id/imagebutton_recipe_favorite"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:contentDescription="@string/recipe_button_favorite_description"
+            android:src="@drawable/ic_action_star" />
+
+        <ImageButton
+            android:id="@+id/imagebutton_recipe_shopping_list"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:contentDescription="@string/recipe_button_shopping_list_description"
+            android:src="@drawable/ic_action_star" />
+    </LinearLayout>
 
 </LinearLayout>
