--- a/res/layout/activity_recipe.xml
+++ b/res/layout/activity_recipe.xml
@@ -33,7 +33,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:contentDescription="@string/recipe_button_shopping_list_description"
-            android:src="@drawable/ic_action_star" />
+            android:src="@drawable/ic_action_shopping_cart" />
     </LinearLayout>
 
 </LinearLayout>
