Shopping List aggregated ingredients complete

--- a/res/layout/activity_select_recipe.xml
+++ b/res/layout/activity_select_recipe.xml
@@ -10,4 +10,11 @@
         android:layout_height="wrap_content"
         android:dividerHeight="0dp" />
 
+    <LinearLayout
+        android:id="@+id/layout_select_recipe_ingredients"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical" >
+    </LinearLayout>
+
 </LinearLayout>
