--- a/res/layout/recipe_list_item.xml
+++ b/res/layout/recipe_list_item.xml
@@ -14,7 +14,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
-        android:layout_toLeftOf="@+id/recipe_list_time"
+        android:layout_toLeftOf="@+id/recipe_list_info_right"
         android:layout_toRightOf="@+id/recipe_list_image"
         android:paddingLeft="6dp" >
 
@@ -35,7 +35,7 @@
     </RelativeLayout>
 
     <TextView
-        android:id="@+id/recipe_list_time"
+        android:id="@+id/recipe_list_info_right"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_alignParentRight="true"
