Game progress, Housekeeping

--- a/res/menu/main.xml
+++ b/res/menu/main.xml
@@ -7,6 +7,12 @@
         android:showAsAction="always"
         android:title="@string/menu_recipes"/>
     <item
+        android:id="@+id/menu_trees"
+        android:icon="@drawable/ic_action_select_all"
+        android:orderInCategory="1"
+        android:showAsAction="always"
+        android:title="@string/menu_trees"/>
+    <item
         android:id="@+id/menu_shopping_list"
         android:icon="@drawable/ic_action_shopping_cart"
         android:orderInCategory="2"
