--- a/res/layout/activity_trees.xml
+++ b/res/layout/activity_trees.xml
@@ -8,9 +8,9 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".TreeActivity" >
 
-    <TextView
+    <TableLayout
+        android:id="@+id/table_tree"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/welcome" />
+        android:layout_height="wrap_content" />
 
 </RelativeLayout>
