Tree edge progress

--- a/res/layout/activity_trees.xml
+++ b/res/layout/activity_trees.xml
@@ -8,11 +8,18 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".TreeActivity" >
 
-    <LinearLayout
-        android:id="@+id/layout_tree"
+    <!-- android:background="@drawable/layout_background_dark" -->
+
+    <RelativeLayout
+        android:id="@+id/layout_tree_overlay"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical" >
-    </LinearLayout>
+        android:layout_height="wrap_content" >
+
+        <LinearLayout
+            android:id="@+id/layout_tree"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical" />
+    </RelativeLayout>
 
 </ScrollView>
