--- a/res/layout/activity_recipe.xml
+++ b/res/layout/activity_recipe.xml
@@ -14,11 +14,24 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal" >
 
-        <TextView
-            android:id="@+id/textview_recipe_name"
+        <RelativeLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1" />
+            android:layout_weight="1" >
+
+            <TextView
+                android:id="@+id/textview_recipe_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="18sp" />
+
+            <TextView
+                android:id="@+id/textview_recipe_subtitle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/textview_recipe_name"
+                android:textSize="14sp" />
+        </RelativeLayout>
 
         <ImageButton
             android:id="@+id/imagebutton_recipe_favorite"
