--- a/res/layout/activity_recipe.xml
+++ b/res/layout/activity_recipe.xml
@@ -23,15 +23,13 @@
             <TextView
                 android:id="@+id/textview_recipe_name"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="18sp" />
+                android:layout_height="wrap_content" />
 
             <TextView
                 android:id="@+id/textview_recipe_subtitle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/textview_recipe_name"
-                android:textSize="14sp" />
+                android:layout_below="@id/textview_recipe_name" />
         </RelativeLayout>
 
         <RelativeLayout
