--- a/res/layout/activity_trees.xml
+++ b/res/layout/activity_trees.xml
@@ -1,18 +1,27 @@
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".TreeActivity" >
 
-    <!-- android:background="@drawable/layout_background_dark" -->
-
-    <RelativeLayout
-        android:id="@+id/layout_tree"
+    <Spinner
+        android:id="@+id/trees_spinner"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
-</ScrollView>
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" >
+
+        <RelativeLayout
+            android:id="@+id/layout_tree"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+    </ScrollView>
+
+</LinearLayout>
